Adding test cases