@@ -6,8 +6,8 @@ import raw.jdbc.oauth2.TokenResponse;
 import raw.jdbc.oauth2.OAuthUtils;
 import raw.jdbc.oauth2.PasswordCredentials;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.IOException;
+import java.net.*;
 import java.sql.*;
 import java.util.List;
 import java.util.Properties;
@@ -25,16 +25,16 @@ public class RawDriver implements Driver {
     static Logger logger = Logger.getLogger(RawDriver.class.getName());
 
     public Connection connect(String url, Properties info) throws SQLException {
+
+        Properties props = parseProperties(url, info);
+        PasswordCredentials credentials = PasswordCredentials.fromProperties(props);
+        String authUrl = props.getProperty(AUTH_PROP_NAME);
+        String executer = props.getProperty(EXEC_PROP_NAME);
         try {
-            Properties props = parseProperties(url, info);
-            PasswordCredentials credentials = PasswordCredentials.fromProperties(props);
-            String authUrl = props.getProperty(AUTH_PROP_NAME);
-            String executer = props.getProperty(EXEC_PROP_NAME);
             TokenResponse token = OAuthUtils.getPasswdGrantToken(authUrl, credentials);
             return new RawConnection(executer, authUrl, token);
-
-        } catch (Exception e) {
-            throw new SQLException(e.getMessage(), e);
+        } catch (IOException e) {
+            throw new SQLException("Unable to get authorization for jdbc connection", e);
         }
     }
 
@@ -44,20 +44,42 @@ public class RawDriver implements Driver {
         }
         try {
             Properties properties = new Properties();
-            URI uri = new URI(url);
-            List<NameValuePair> paramList = URLEncodedUtils.parse(uri, "UTF-8");
+
+            logger.fine("url: " + url);
+            // removes the jdbc:
+            String cleaned = url.substring(9);
+            logger.fine("cleaned: " + cleaned);
+            URL uri = new URL(cleaned);
+            List<NameValuePair> paramList = URLEncodedUtils.parse(new URI(cleaned), "UTF-8");
+
             for (NameValuePair nvp : paramList) {
                 properties.put(nvp.getName(), nvp.getValue());
             }
 
-            String executor = String.format("%s:%d", uri.getHost(), uri.getPort());
-            logger.finest("executor: " + executor);
+            String executor = uri.getProtocol() + "://" + uri.getHost();
+            if (uri.getPort() > 0) {
+                executor += ":" + uri.getPort();
+            }
+
             properties.setProperty(EXEC_PROP_NAME, executor);
             String userinfo = uri.getUserInfo();
-            logger.finest("user info: " + userinfo);
+            if (userinfo != null) {
+                int idx = userinfo.indexOf(':');
+                String username;
+                if (idx > 0) {
+                    username = URLDecoder.decode(userinfo.substring(0, idx));
+                    String password = URLDecoder.decode(userinfo.substring(idx + 1));
+                    properties.setProperty("password", password);
+                } else {
+                    username = uri.getUserInfo();
+                }
+                properties.setProperty("username", username);
+            }
             return properties;
-        } catch (URISyntaxException e) {
+        } catch (MalformedURLException e) {
             throw new SQLException("Invalid url", e);
+        } catch (URISyntaxException e) {
+            throw new SQLException("Invalid uri", e);
         }
     }
 
@@ -95,7 +117,7 @@ public class RawDriver implements Driver {
         finalInfo.setProperty(EXEC_PROP_NAME, urlParams.getProperty(EXEC_PROP_NAME));
         finalInfo.setProperty(OAuthUtils.CLIENT_ID, JDBC_CLIENT_ID);
         finalInfo.setProperty(OAuthUtils.GRANT_TYPE, GRANT_TYPE);
-        if (!finalInfo.contains(AUTH_PROP_NAME)) {
+        if (finalInfo.getProperty(AUTH_PROP_NAME) == null) {
             throw new SQLException("Could not find authorization url property");
         }
         return finalInfo;
